Format code on all pages to ensure readability and consistency

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,7 @@ p {
   text-align: justify;
   background-color: rgba(76, 187, 23, 0.2);
 }
+
 /* grid outer box styling */
 .box {
   display: grid;
@@ -164,7 +165,8 @@ img:hover {
 }
 
 /* style for contact form user inputs and text box entry */
-.user_input, .query_entry {
+.user_input,
+.query_entry {
   width: 90%;
   margin: 5px 0 5px 0;
   border: 1px solid #fff600ff;
@@ -175,7 +177,8 @@ img:hover {
   height: 25px;
 }
 
-.user_input:hover, .query_entry:hover {
+.user_input:hover,
+.query_entry:hover {
   border-color: #e30022ff;
 }
 
@@ -221,7 +224,10 @@ i {
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
   .topnav a.icon {
     float: right;
     display: block;
@@ -230,12 +236,16 @@ i {
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. Rather than having very squashed nav, it apepars vertically on a drop-down */
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
+
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
     top: 0;
   }
+
   .topnav.responsive a {
     float: none;
     display: block;
